--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
      
      <h1>samuel saraiva nicolau da silva</h1>
-   <p>olá meu nome é samuel, tenho 16 anos e sou natural de Terra Rica. Sou uma menino curioso , comunicatico, falador e gosto de aprender coisas novas, estudo no maxi onde preocuro contribuir e somar para a apredizagem escolar.    </p>
+   <p>olá meu nome é samuel, tenho 16 anos e sou natural de Terra Rica. Sou uma menino curioso , comunicatico, falador e gosto de aprender coisas novas, estudo no maxi onde procuro contribuir e somar para a apredizagem escolar.    </p>
    <br>
    
 <p>Estou sempre aberto para novas aprendizagens e conhecimneto.</p>
